src/app/components/CurriculumModal/modal.css
.modal__open {
  overflow: hidden;
}

.modal__dialog {
  display: grid;
  grid-column: 1fr;
  place-items: center;
  background: var(--bg-color);
  height: 40%;
  width: 40%;
  font-size:1.225em;
  border-radius: var(--radius);
}

.modal__title,
.modal__body {
  display: flex;
  width: 80%;
  justify-content: flex-start;
}

.modal__title{
  font-size: 1.6em;
}

.modal__buttons{
  display: flex;
  width: 80%;
  justify-content: flex-end;
  gap:1em;
}

.modal__anchor {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 8em;
  height: 2em;
  border-radius: var(--radius);
  text-decoration:none;
  transition-property: all;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
  transition-duration: 150ms;
}

.modal__anchor:hover {
  cursor: pointer;
}

.anchor__ok{
  background-image: var(--tertiary-gradient-bg);
  color:var(--bg-color);
}

.anchor__cancel{
  background-image: var(--danger-gradient-bg);
  color:var(--bg-color);
}

.separator{
  background-color: var(--fg-color);
  height:0.01em;
  width: 100%;
}

@media(min-width: 1440px){
  .modal__title{
    font-size:2.1em;
  }
}
@media(max-width: 820px){
  .modal__dialog{
    width: 90%;
  }
}

@media(max-width: 320px){
  .modal__dialog{
    width: 100%;
    height:50%;
  }
}

